objects/Case.object
<CustomObject>
    <fields>
        <fullName>Privacy_Case_Resolved_Date__c</fullName>
        <description>The date where the case was resolved. After some hours, configured in custom settings, the case will be closed</description>
        <label>Privacy Case Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Privacy_Date_Consumer_Last_Contacted__c</fullName>
        <description>The date where the consumer was contacted for additional information. After some hours, configured in custom settings, the case will be closed if the consumer does not respond.</description>
        <label>Privacy Date Consumer Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Privacy_Escalation_Email__c</fullName>
        <description>Controlled by Account - The email address to use when data owner cases need to be escalated</description>
        <label>Privacy Escalation Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Privacy_Last_Contacted_Formatted__c</fullName>
        <formula>IF(!ISBLANK(Privacy_Date_Consumer_Last_Contacted__c),
LEFT(TEXT(Privacy_Date_Consumer_Last_Contacted__c), 10),
'')</formula>
        <label>Privacy Last Contacted Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_URLforRESTAPIResponse__c</fullName>
        <formula>$CustomMetadata.PrivacyBrandSetting__mdt.default.URL_for_REST_API_Requests__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL for REST API Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_User_Confirmed_Date__c</fullName>
        <description>The date that the user confirmed their privacy request</description>
        <label>Privacy User Confirmed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>This field is used to store Product Category</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Women's Swimwear</fullName>
                </value>
                <value>
                    <fullName>Women's Competition Swimwear</fullName>
                </value>
                <value>
                    <fullName>Women's Activewear</fullName>
                </value>
                <value>
                    <fullName>Women's Footwear</fullName>
                </value>
                <value>
                    <fullName>Men's Swimwear</fullName>
                </value>
                <value>
                    <fullName>Men's Competition Swimwear</fullName>
                </value>
                <value>
                    <fullName>Men's Activewear</fullName>
                </value>
                <value>
                    <fullName>Men's Footwear</fullName>
                </value>
                <value>
                    <fullName>Girl's Swimwear</fullName>
                </value>
                <value>
                    <fullName>Boy's Swimwear</fullName>
                </value>
                <value>
                    <fullName>Kid's Footwear</fullName>
                </value>
                <value>
                    <fullName>Goggles</fullName>
                </value>
                <value>
                    <fullName>Gear</fullName>
                </value>
                <value>
                    <fullName>Bra &amp; Underwear Collection</fullName>
                </value>
                <value>
                    <fullName>Bra</fullName>
                </value>
                <value>
                    <fullName>Underwear</fullName>
                </value>
                <value>
                    <fullName>Women's Apparel</fullName>
                </value>
                <value>
                    <fullName>Women's Accessories</fullName>
                </value>
                <value>
                    <fullName>Women's Underwear</fullName>
                </value>
                <value>
                    <fullName>Men's Apparel</fullName>
                </value>
                <value>
                    <fullName>Men's Accessories</fullName>
                </value>
                <value>
                    <fullName>Men's Underwear</fullName>
                </value>
                <value>
                    <fullName>Boy's Apparel</fullName>
                </value>
                <value>
                    <fullName>Girl's Apparel</fullName>
                </value>
                <value>
                    <fullName>Women's Collections</fullName>
                </value>
                <value>
                    <fullName>Men's Collections</fullName>
                </value>
                <value>
                    <fullName>Boy's Apparel &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Girl's Apparel &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Tommy Adaptive Boys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bikinis &amp; Separates</fullName>
                </value>
                <value>
                    <fullName>One Piece Swimsuits</fullName>
                </value>
                <value>
                    <fullName>Rash Guards</fullName>
                </value>
                <value>
                    <fullName>Swim Bottoms</fullName>
                </value>
                <value>
                    <fullName>Tankinis</fullName>
                </value>
                <value>
                    <fullName>Triathlon &amp; Wetsuits</fullName>
                </value>
                <value>
                    <fullName>Elite Technical Swimsuits</fullName>
                </value>
                <value>
                    <fullName>Parkas</fullName>
                </value>
                <value>
                    <fullName>Racing &amp; Practice Swimsuits</fullName>
                </value>
                <value>
                    <fullName>Team Apparel</fullName>
                </value>
                <value>
                    <fullName>Jackets</fullName>
                </value>
                <value>
                    <fullName>Joggers</fullName>
                </value>
                <value>
                    <fullName>Pants &amp; Leggings</fullName>
                </value>
                <value>
                    <fullName>Shorts</fullName>
                </value>
                <value>
                    <fullName>Swim Tees</fullName>
                </value>
                <value>
                    <fullName>Flip-flop</fullName>
                </value>
                <value>
                    <fullName>Water Shoe</fullName>
                </value>
                <value>
                    <fullName>Briefs</fullName>
                </value>
                <value>
                    <fullName>Jammers</fullName>
                </value>
                <value>
                    <fullName>Square Legs</fullName>
                </value>
                <value>
                    <fullName>Swim Trunks &amp; Boardshorts</fullName>
                </value>
                <value>
                    <fullName>Team Warmups</fullName>
                </value>
                <value>
                    <fullName>Tops &amp; Tanks</fullName>
                </value>
                <value>
                    <fullName>Begin To Swim</fullName>
                </value>
                <value>
                    <fullName>One- Piece Suits</fullName>
                </value>
                <value>
                    <fullName>Board shorts</fullName>
                </value>
                <value>
                    <fullName>Volleys</fullName>
                </value>
                <value>
                    <fullName>Adult Goggles</fullName>
                </value>
                <value>
                    <fullName>Elite Goggles</fullName>
                </value>
                <value>
                    <fullName>Jr. Goggles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Channel__c</fullName>
        <label>Purchase Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online - calvinklein.com</fullName>
                </value>
                <value>
                    <fullName>Online - tommy.com</fullName>
                </value>
                <value>
                    <fullName>Online - vanheusen.com</fullName>
                </value>
                <value>
                    <fullName>Online - styleBureau.com</fullName>
                </value>
                <value>
                    <fullName>Online - izod.com</fullName>
                </value>
                <value>
                    <fullName>Online - trueandco.com</fullName>
                </value>
                <value>
                    <fullName>Online - speedo.com</fullName>
                </value>
                <value>
                    <fullName>Calvin Klein store</fullName>
                </value>
                <value>
                    <fullName>Tommy Hilfiger store</fullName>
                </value>
                <value>
                    <fullName>Van Heusen store</fullName>
                </value>
                <value>
                    <fullName>Other Retailer</fullName>
                </value>
                <value>
                    <fullName>Online-CalvinKlein Canada</fullName>
                </value>
                <value>
                    <fullName>Online-Warner's</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code_Details__c</fullName>
        <label>Reason Code Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted Forms of Payment</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Merge</fullName>
                </value>
                <value>
                    <fullName>Account Registration Error</fullName>
                </value>
                <value>
                    <fullName>Adaptive</fullName>
                </value>
                <value>
                    <fullName>Associate Discount</fullName>
                </value>
                <value>
                    <fullName>Authorization Hold</fullName>
                </value>
                <value>
                    <fullName>BBB Complaint</fullName>
                </value>
                <value>
                    <fullName>Black Friday Complaint</fullName>
                </value>
                <value>
                    <fullName>Brand Protection</fullName>
                </value>
                <value>
                    <fullName>Bulk Buyer Warning</fullName>
                </value>
                <value>
                    <fullName>Business Solicitation</fullName>
                </value>
                <value>
                    <fullName>Cancelled Item</fullName>
                </value>
                <value>
                    <fullName>Cancelled Order</fullName>
                </value>
                <value>
                    <fullName>Cancel Order Request</fullName>
                </value>
                <value>
                    <fullName>Care Instructions</fullName>
                </value>
                <value>
                    <fullName>Check Complaint</fullName>
                </value>
                <value>
                    <fullName>Check Inventory/Restock Inquiry</fullName>
                </value>
                <value>
                    <fullName>Claim Status</fullName>
                </value>
                <value>
                    <fullName>Contest/Sweepstakes</fullName>
                </value>
                <value>
                    <fullName>Corporate Outfitters Request</fullName>
                </value>
                <value>
                    <fullName>Corporate Responsibility</fullName>
                </value>
                <value>
                    <fullName>Corp Social Responsibility</fullName>
                </value>
                <value>
                    <fullName>Counterfeit Merchandise</fullName>
                </value>
                <value>
                    <fullName>Country/State Error</fullName>
                </value>
                <value>
                    <fullName>Coupon Request</fullName>
                </value>
                <value>
                    <fullName>Covet Diamond Request</fullName>
                </value>
                <value>
                    <fullName>Create Return (FEDEX)</fullName>
                </value>
                <value>
                    <fullName>Create Return (NARVAR)</fullName>
                </value>
                <value>
                    <fullName>Customer Accident</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code_Manufacturers__c</fullName>
        <label>Reason Code Manufacturers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessory Network</fullName>
                </value>
                <value>
                    <fullName>American Essentials</fullName>
                </value>
                <value>
                    <fullName>Basic Resources (VH Socks)</fullName>
                </value>
                <value>
                    <fullName>BCNY</fullName>
                </value>
                <value>
                    <fullName>Calvin Klein Sportswear</fullName>
                </value>
                <value>
                    <fullName>ClearVision Optical</fullName>
                </value>
                <value>
                    <fullName>COTY</fullName>
                </value>
                <value>
                    <fullName>Customer Leather</fullName>
                </value>
                <value>
                    <fullName>Cutie Pie Baby (100364)</fullName>
                </value>
                <value>
                    <fullName>Delta Galil</fullName>
                </value>
                <value>
                    <fullName>Estee</fullName>
                </value>
                <value>
                    <fullName>Fishman &amp; Tobin (477)</fullName>
                </value>
                <value>
                    <fullName>Fletcher</fullName>
                </value>
                <value>
                    <fullName>G-III Apparel Group (54163)</fullName>
                </value>
                <value>
                    <fullName>Global Brands Group</fullName>
                </value>
                <value>
                    <fullName>Harbor Footwear</fullName>
                </value>
                <value>
                    <fullName>Himatsingka (33699)</fullName>
                </value>
                <value>
                    <fullName>Internal Wholesale</fullName>
                </value>
                <value>
                    <fullName>Jimlar</fullName>
                </value>
                <value>
                    <fullName>Kayser-Roth Corp.</fullName>
                </value>
                <value>
                    <fullName>Kids Headquarters</fullName>
                </value>
                <value>
                    <fullName>LF Home</fullName>
                </value>
                <value>
                    <fullName>Marc Fisher</fullName>
                </value>
                <value>
                    <fullName>Marchon (77169)</fullName>
                </value>
                <value>
                    <fullName>Marcraft</fullName>
                </value>
                <value>
                    <fullName>Max Leather</fullName>
                </value>
                <value>
                    <fullName>Movado</fullName>
                </value>
                <value>
                    <fullName>Nourison</fullName>
                </value>
                <value>
                    <fullName>Pacific Coast Feather (19648)</fullName>
                </value>
                <value>
                    <fullName>Peerless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code_Product_Category__c</fullName>
        <label>Reason Code Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Activewear</fullName>
                </value>
                <value>
                    <fullName>Bags/Wallets</fullName>
                </value>
                <value>
                    <fullName>Bottoms</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Products</fullName>
                </value>
                <value>
                    <fullName>Dress Shirts</fullName>
                </value>
                <value>
                    <fullName>Dresses/Skirts</fullName>
                </value>
                <value>
                    <fullName>Footwear</fullName>
                </value>
                <value>
                    <fullName>Fragrances</fullName>
                </value>
                <value>
                    <fullName>Home Products</fullName>
                </value>
                <value>
                    <fullName>Infant</fullName>
                </value>
                <value>
                    <fullName>Jeans/Denim</fullName>
                </value>
                <value>
                    <fullName>Luggage</fullName>
                </value>
                <value>
                    <fullName>Outerwear</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Shirts/Tops/Blouses/Polos</fullName>
                </value>
                <value>
                    <fullName>Suiting/Formal Wear</fullName>
                </value>
                <value>
                    <fullName>Sweaters/Wovens</fullName>
                </value>
                <value>
                    <fullName>Swimwear</fullName>
                </value>
                <value>
                    <fullName>Tops</fullName>
                </value>
                <value>
                    <fullName>Underwear</fullName>
                </value>
                <value>
                    <fullName>Watches/Jewelry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code_Product_Sub_Categories__c</fullName>
        <label>Reason Code Product Sub-Categories</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_Sub_detail__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bath Products</fullName>
                </value>
                <value>
                    <fullName>Bedding Products</fullName>
                </value>
                <value>
                    <fullName>Belts</fullName>
                </value>
                <value>
                    <fullName>Coats/Jackets</fullName>
                </value>
                <value>
                    <fullName>Cold Weather</fullName>
                </value>
                <value>
                    <fullName>Décor/Accessories</fullName>
                </value>
                <value>
                    <fullName>Dinnerware</fullName>
                </value>
                <value>
                    <fullName>Eyewear</fullName>
                </value>
                <value>
                    <fullName>Formal Wear</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Goggles</fullName>
                </value>
                <value>
                    <fullName>Handbags</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Kids Footwear</fullName>
                </value>
                <value>
                    <fullName>Mens Footwear</fullName>
                </value>
                <value>
                    <fullName>Mens Suiting</fullName>
                </value>
                <value>
                    <fullName>Men’s Underwear</fullName>
                </value>
                <value>
                    <fullName>Overcoats</fullName>
                </value>
                <value>
                    <fullName>Rugs</fullName>
                </value>
                <value>
                    <fullName>Slippers</fullName>
                </value>
                <value>
                    <fullName>Small Goods</fullName>
                </value>
                <value>
                    <fullName>Socks/Tights</fullName>
                </value>
                <value>
                    <fullName>Swim Caps</fullName>
                </value>
                <value>
                    <fullName>Swim Shoes</fullName>
                </value>
                <value>
                    <fullName>Swimwear Type - Elite/LZR Competition</fullName>
                </value>
                <value>
                    <fullName>Swimwear Type - General Swimwear</fullName>
                </value>
                <value>
                    <fullName>Third-Party Vendor - Amazon</fullName>
                    <label>Third-Party Vendor-Amazon</label>
                </value>
                <value>
                    <fullName>Third-Party Vendor - Costco</fullName>
                    <label>Third-Party Vendor-Costco</label>
                </value>
                <value>
                    <fullName>Third-Party Vendor - Dick’s Sporting Goods</fullName>
                    <label>Third-Party Vendor-Dick’s Sporting Goods</label>
                </value>
                <value>
                    <fullName>Third-Party Vendor - Elsmore Swim Shop</fullName>
                    <label>Third-Party Vendor-Elsmore Swim Shop</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Sub_detail__c</fullName>
        <label>Reason Sub-detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_Code_Details__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Activewear</fullName>
                </value>
                <value>
                    <fullName>Advertisement Feedback</fullName>
                </value>
                <value>
                    <fullName>Associate Behavior</fullName>
                </value>
                <value>
                    <fullName>Bags/Wallets</fullName>
                </value>
                <value>
                    <fullName>Bottoms</fullName>
                </value>
                <value>
                    <fullName>Canadian Return Policy</fullName>
                </value>
                <value>
                    <fullName>Carrier Claim</fullName>
                </value>
                <value>
                    <fullName>Checkout/Cart</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>Cosmetic Products</fullName>
                </value>
                <value>
                    <fullName>Customer Injury</fullName>
                </value>
                <value>
                    <fullName>Customer Profiling</fullName>
                </value>
                <value>
                    <fullName>Damaged Package</fullName>
                </value>
                <value>
                    <fullName>Dead Hyperlink</fullName>
                </value>
                <value>
                    <fullName>Delivered Not Received</fullName>
                </value>
                <value>
                    <fullName>Delivered to Freight Forwarder</fullName>
                </value>
                <value>
                    <fullName>Dresses/Skirts</fullName>
                </value>
                <value>
                    <fullName>Dress Shirts</fullName>
                </value>
                <value>
                    <fullName>Editorial Feedback</fullName>
                </value>
                <value>
                    <fullName>Employment Opportunities</fullName>
                </value>
                <value>
                    <fullName>Employment Verification</fullName>
                </value>
                <value>
                    <fullName>Fashion Event Request</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Fit &amp; Sizing Question</fullName>
                </value>
                <value>
                    <fullName>Footwear</fullName>
                </value>
                <value>
                    <fullName>Fragrances</fullName>
                </value>
                <value>
                    <fullName>General Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Gift Return/Exchange</fullName>
                </value>
                <value>
                    <fullName>Home Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceID__c</fullName>
        <description>ReferenceID to be attached in mail that will attach the reply to respective case.</description>
        <formula>"ref:_" &amp; LEFT( $Organization.Id ,5) &amp; SUBSTITUTE(RIGHT( $Organization.Id ,10), "0", "" )&amp; "._" &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), "0", "") &amp; RIGHT(Id,5) &amp; ":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReferenceID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Rejected Request</fullName>
                </value>
                <value>
                    <fullName>No Response to follow-up</fullName>
                </value>
                <value>
                    <fullName>Data Not Found</fullName>
                </value>
                <value>
                    <fullName>User Data Provided</fullName>
                </value>
                <value>
                    <fullName>User Data Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <description>Resolution Time for Case for Milestone</description>
        <formula>IF( NOT(ISNULL(Resolved_Date__c)),
TEXT( 
FLOOR(Resolved_Date__c - CreatedDate) 
) &amp; " Days, " &amp; 
TEXT( 
FLOOR(MOD((Resolved_Date__c - CreatedDate)*24,24)) 
) &amp;" Hours, " &amp; 
TEXT( 
ROUND(MOD((Resolved_Date__c - CreatedDate)*1440,60),0) 
) &amp;" Minutes"
, 'N/A')</formula>
        <label>Resolution Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <description>The date the Case Status hits resolved. If the customer re-opens the Case and then the Case is resolved, it's the more recent Resolved Date.</description>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RewardId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RewardId</label>
        <referenceTo>Reward__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reward_Change_Details__c</fullName>
        <label>Reward Change Details</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reward_Change_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Disqualification</fullName>
                </value>
                <value>
                    <fullName>Store Processed Manual Accommodation</fullName>
                </value>
                <value>
                    <fullName>Online Transaction Manual Accommodation</fullName>
                </value>
                <value>
                    <fullName>Customer Distance</fullName>
                </value>
                <value>
                    <fullName>Customer Sick</fullName>
                </value>
                <value>
                    <fullName>Customer Traveling</fullName>
                </value>
                <value>
                    <fullName>Outside of Country</fullName>
                </value>
                <value>
                    <fullName>Did Not Receive Email</fullName>
                </value>
                <value>
                    <fullName>Customer Accommodation</fullName>
                </value>
                <value>
                    <fullName>Unable to Extend</fullName>
                </value>
                <value>
                    <fullName>Gift Card Accommodation</fullName>
                </value>
                <value>
                    <fullName>Adding Transaction</fullName>
                </value>
                <value>
                    <fullName>Beyond Extension Period</fullName>
                </value>
                <value>
                    <fullName>Signup Bonus Points Issue</fullName>
                </value>
                <value>
                    <fullName>Double Points Promo</fullName>
                </value>
                <value>
                    <fullName>Triple Points Promo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reward_Change_Type__c</fullName>
        <label>Reward Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expire</fullName>
                </value>
                <value>
                    <fullName>Redeem</fullName>
                </value>
                <value>
                    <fullName>Extend</fullName>
                </value>
                <value>
                    <fullName>AccommodationPoints</fullName>
                    <label>Accommodation Points</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reward_Number__c</fullName>
        <label>Reward Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkillName__c</fullName>
        <label>SkillName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sku_Style_Number_TnCo_ReasonCode__c</fullName>
        <label>Sku/Style Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>